# RoboOps.Lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  schemas.py
app/services/: analytics.py  reports.py
app/static/: styles.css
app/templates/: dashboard.html  trial.html
sample_data/: robocup_trial.csv
tests/: test_analytics.py  test_app.py
